--- a/style.css
+++ b/style.css
@@ -124,14 +124,15 @@ body {
 
 .links ul {
   display: flex;
-  flex-direction: column;
   gap: 16px;
   padding: 24px 0;
+  justify-content: center;
 
   list-style: none;
 }
 
 .links li {
+  width: 200px;
   border-radius: 8px;
   background: var(--surface-color);
   border: 1px solid var(--border-color);
@@ -150,13 +151,36 @@ body {
   display: flex;
   justify-content: center;
   padding: 16px 24px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.card .card-title {
+  font-size: 16px;
   font-weight: 500;
+}
+
+.card .in-development-tag {
+  background-color: rgb(198, 198, 16);
+  border-radius: 10px;
+  font-size: 10px;
+  font-weight: normal;
+  display: block;
+  margin: 0 auto;
+  padding: 4px 8px;
 }
 
 .social-links {
   padding: 24px 0;
   display: flex;
   justify-content: center;
+  gap: 4px;
 }
 
 .social-links ion-icon {
@@ -167,7 +191,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px;
+  padding: 8px;
 
   border-radius: 50%;
   transition: background 0.2s;
